Fix top bar z-index overlapping

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -165,6 +165,7 @@ app {
     .main .top-row {
         position: sticky;
         top: 0;
+        z-index: 1000;
     }
 
     .main > div {
